<resources>
    <string name="app_name">Dota Timing Reminder</string>
    <string name="r_start">Start</string>
    <string name="r_plus">+</string>
    <string name="r_minus">-</string>
    <string name="r_new_game">New Game</string>
    <string name="r_after">Live</string>
    <string name="r_before">Pre-Game</string>
    <string name="r_minutes">Minutes</string>
    <string name="r_seconds">Seconds</string>
    <string name="r_colon">:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="r_pause">Pause</string>
    <string name="r_play">Play</string>
    <string name="r_rune">Rune</string>
    <string name="r_settings">Settings</string>
    <string name="r_stack">Stack</string>
    <string name="r_spawn">Spawn</string>
    <string name="r_day_night">Day Night</string>
    <string name="r_back">Back</string>
    <string name="r_off">OFF</string>
    <string name="r_disabled">is disabled</string>
    <string name="r_set_to">is set to</string>
    <string name="r_seconds_before_event"> seconds before event</string>
    <string name="r_reminder">reminder</string>
    <string name="r_information">information</string>
    <string name="r_open">Open</string>
    <string name="r_close">Close</string>

    <string name="r_rune_description">Runes are special boosters that spawn on the game map. They come in two categories. Bounty Runes can be picked up for extra gold and experience, while Power-up Runes grant heroes a variety of buffs and effects for a short period of time. Bounty Runes spawn at 0:00 on the game clock, and every two minutes after that. Power-up Runes spawn at 2:00 on the game clock, and every two minutes after that.</string>
    <string name="r_stack_description">Creep Stacking is the process of drawing neutral creeps away from their camps in order to increase the number of units in an area. To stack a camp, you can either attack a unit in the camp or simply walk close to it. The neutral creeps will then attempt to chase you for a few seconds before returning to their initial position. Camps can be stacked at the 54 second mark.</string>
    <string name="r_spawn_description">Lane creep spawns for each faction at each of their barracks. Lane creeps spawn the first time as the game timer reaches 00:00. After that, they spawn every 30 seconds. Neutral creeps appear in small camps scattered in the jungle on both sides of the map. Neutral creeps will spawn in the first 30 seconds of the game and at every minute thereafter. So 0:30, 1:00, 2:00, 3:00 etc.</string>
    <string name="r_day_night_description">Each day in Dota 2 is 8 minutes long, divided evenly between daytime and nighttime. Dawn starts at 0:00, the first night begins at 4:00, the second day starts at 8:00, and so on. At night, the map is darker and most heroes experience reduced vision. Additionally, some heroes have their abilities modified according to the time of day.</string>

    <string-array name="r_thirty_seconds_array">
        <item>OFF</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
    </string-array>
    <string-array name="r_twenty_seconds_array">
        <item>OFF</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="r_ten_seconds_array">
        <item>OFF</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
</resources>
