<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ucalled911.DOTA2TimerAndReminder.MainActivity">

    <include android:id="@+id/tool_bar" layout="@layout/tool_bar"/>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minute_picker"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/second_picker"
        android:layout_alignBottom="@+id/minute_picker"
        android:layout_alignRight="@+id/start_button"
        android:layout_alignEnd="@+id/start_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_start"
        android:id="@+id/start_button"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/minute_picker"
        android:layout_toEndOf="@+id/minute_picker"
        android:layout_marginBottom="89dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/before_after_group"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_before"
            android:id="@+id/before_button"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_after"
            android:id="@+id/after_button"
            android:checked="true"
            android:layout_above="@+id/before_after_group"
            android:layout_alignLeft="@+id/before_after_group"
            android:layout_alignStart="@+id/before_after_group" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/r_minutes"
        android:id="@+id/minute_text"
        android:layout_above="@+id/minute_picker"
        android:layout_alignRight="@+id/minute_picker"
        android:layout_alignEnd="@+id/minute_picker"
        android:layout_marginBottom="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/r_seconds"
        android:id="@+id/seconds_text"
        android:layout_alignTop="@+id/minute_text"
        android:layout_alignLeft="@+id/second_picker"
        android:layout_alignStart="@+id/second_picker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/r_colon"
        android:id="@+id/colon"
        android:layout_marginBottom="24dp"
        android:paddingLeft="9dp"
        android:layout_alignBottom="@+id/before_after_group"
        android:layout_toRightOf="@+id/minute_picker"
        android:layout_toEndOf="@+id/minute_picker" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_settings"
        android:id="@+id/settings_button"
        android:layout_alignTop="@+id/start_button"
        android:layout_toLeftOf="@+id/minute_text"
        android:layout_toStartOf="@+id/minute_text" />

</RelativeLayout>
