<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ucalled911.DOTA2TimerAndReminder.app.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/r_rune"
        android:id="@+id/rune_text"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal='true'
        android:layout_below="@id/toolbar"/>

    <com.wefika.horizontalpicker.HorizontalPicker
        android:id="@+id/rune_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal='true'
        android:layout_below="@+id/rune_text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="7dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:values="@array/r_twenty_seconds_array"
        app:dividerSize="5dp"
        app:sideItems="@integer/twoSideItems"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rune_picker"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/r_stack"
        android:id="@+id/stack_text"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal='true'/>

    <com.wefika.horizontalpicker.HorizontalPicker
        android:id="@+id/stack_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal='true'
        android:layout_below="@+id/stack_text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="7dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:values="@array/r_twenty_seconds_array"
        app:dividerSize="5dp"
        app:sideItems="@integer/twoSideItems"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stack_picker"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/r_spawn"
        android:id="@+id/spawn_text"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal='true'/>

    <com.wefika.horizontalpicker.HorizontalPicker
        android:id="@+id/spawn_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal='true'
        android:layout_below="@+id/spawn_text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="7dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:values="@array/r_ten_seconds_array"
        app:dividerSize="5dp"
        app:sideItems="@integer/twoSideItems"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spawn_picker"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/r_day_night"
        android:id="@+id/day_night_text"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal='true'/>

    <com.wefika.horizontalpicker.HorizontalPicker
        android:id="@+id/day_night_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal='true'
        android:layout_below="@+id/day_night_text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="7dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:values="@array/r_thirty_seconds_array"
        app:dividerSize="5dp"
        app:sideItems="@integer/twoSideItems"/>


</RelativeLayout>
